--- a/index.html
+++ b/index.html
@@ -44,9 +44,209 @@
     </style>
   </head>
   <body>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script type="text/javascript" src="assets/js/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <nav class="navbar navbar-default navbar-inverse navbar-static-top">
+      <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">TIY Sports</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Teams</a></li>
+        <li><a href="#">Players</a></li>
+        <li><a href="#">Games</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <form class="navbar-form navbar-left">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+      </ul>
+      </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+      <div class="container">
+        <div class="jumbotron">
+          <div class="row">
+            <div class="col-xs-7 col-sm-8 col-md-9 col-lg-10">
+              <h1>TIY Sports</h1>
+              <h5><span class="glyphicon glyphicon-heart" aria-hidden="true"></span> For the students of The Iron Yard</h5>
+            </div>
+            <div class="col-xs-5 col-sm-4 col-md-3 col-lg-2">
+              <div class="media">
+                <div class="media-right">
+                  <a href="#">
+                    <img src="https://static1.squarespace.com/static/54e3cdffe4b07bd81fa21a55/t/55a0507ee4b0cd28c983fd0e/1436569728024/marathon_runninglegs_01_xts.jpg?format=1500w" alt="..." class="media-object img-circle" height="125px" width="125px"></img>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 col-md-3">
+          <div class="thumbnail">
+          <img style="" src="http://sports.cbsimg.net/images/blogs/nike-football.jpg" alt="...">
+          <div class="caption text-center">
+            <h3>Football</h3>
+          </div>
+          </div>
+          </div>
+
+          <div class="col-sm-6 col-md-3">
+          <div class="thumbnail">
+          <img style="" class="img-responsive" src="https://upload.wikimedia.org/wikipedia/commons/d/da/Kauffman_Stadium_at_night,_2009.jpg" alt="...">
+          <div class="caption text-center">
+            <h3>Baseball</h3>
+          </div>
+          </div>
+          </div>
+
+          <div class="col-sm-6 col-md-3">
+          <div class="thumbnail">
+          <img style="" class="img-responsive" src="https://bsbproduction.s3.amazonaws.com/portals/9307/images/basketball1.jpg" alt="...">
+          <div class="caption text-center">
+            <h3>Basketball</h3>
+          </div>
+          </div>
+          </div>
+
+          <div class="col-sm-6 col-md-3">
+          <div class="thumbnail">
+          <img style="" class="img-responsive" src="https://typeset-beta.imgix.net/rehost/2016/9/13/8fa43f34-ba8d-4a43-b8ed-738f4c1b8769.jpg" alt="...">
+          <div class="caption text-center">
+            <h3>Quidditch</h3>
+          </div>
+          </div>
+          </div>
+        </div>
+
+        <div class="alert alert-warning" role="alert"><h4>We've added some brand new features in version 2.0 <button type="button" class="btn btn-link">Learn more</button></h4></div>
+
+        <div class="well well-lg clearfix"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Please <b>log in</b> to edit <button type="button" class="btn btn-primary pull-right">Facebook</button></div>
+
+        <div class="panel panel-default panel-primary">
+          <!-- Default panel contents -->
+          <div class="panel-heading"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> Teams<span class="badge pull-right">317 teams</span></div>
+
+          <!-- List group -->
+          <ul class="list-group">
+            <li class="list-group-item">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                      <img class="media-object" src="http://www.clipartkid.com/images/737/dart-board-clip-art-at-clker-com-vector-clip-art-online-royalty-hhRlOz-clipart.png" alt="..." height="100px" width="100px">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">Tampa Dart Dynamos<span class="badge pull-right">8 players</span></h4>
+                  <h5> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<h5>
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="http://i1140.photobucket.com/albums/n569/eyeluvphotos/Ping%20Pong/tumblr_ng71ksHPHv1sh0vsqo7_500.jpg" alt="..." height="100px" width="100px">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">St Pete Ping Pong Power House<span class="badge pull-right">6 players</span></h4>
+                  <h5> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<h5>
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <img class="media-object" src="http://www.foxbendgolfcourse.com/images/slideshow/02.jpg" alt="..." height="100px" width="100px">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">Orlando Golf Gang<span class="badge pull-right">6 players</span></h4>
+                  <h5> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<h5>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <div class="panel-footer">
+            <div class="text-center">
+              <nav aria-label="Page navigation">
+                <ul class="pagination">
+                  <li>
+                    <a href="#" aria-label="Previous">
+                      <span aria-hidden="true">&laquo;</span>
+                    </a>
+                  </li>
+                  <li><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li><a href="#">3</a></li>
+                  <li><a href="#">4</a></li>
+                  <li><a href="#">5</a></li>
+                  <li>
+                    <a href="#" aria-label="Next">
+                      <span aria-hidden="true">&raquo;</span>
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+
+        <div class="panel panel-default panel-primary">
+          <!-- Default panel contents -->
+          <div class="panel-heading"><span class="glyphicon glyphicon-check" aria-hidden="true"></span> Games</div>
+
+          <!-- Table -->
+          <table class="table">
+            <thead>
+                <th>#</th>
+                <th>Home Team</th>
+                <th>Away Team</th>
+                <th>Score</th>
+            </thead>
+            <tbody>
+              <tr class="success">
+                <td>1</td>
+                <td>Tampa Dart Dynamos</td>
+                <td>Buffalo BullsEyes</td>
+                <td>20-17</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>St Pete Ping Pong Power House</td>
+                <td>Philly Paddlers</td>
+                <td>18-12</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Orlando Golf Gang</td>
+                <td>Portland Putters</td>
+                <td>2-1</td>
+              </tr>
+            </tbody>
+          </table>
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script type="text/javascript" src="assets/js/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+      </div>
   </body>
 </html>
